Book endpoints docs complete
